--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,22 +20,22 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">All posts </a>
+        <a class="nav-link" href="/">All posts </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">MyDesign</a>
+        <a class="nav-link" href="/posts/design">MyDesign</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Publications</a>
+        <a class="nav-link" href="/posts/publication">Publications</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="/posts/books" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown/MyBooks
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Detective</a>
-          <a class="dropdown-item" href="#">Fantasy</a>
-          <a class="dropdown-item" href="#">WomenStory</a>
+          <a class="dropdown-item" href="/posts/detective">Detective</a>
+          <a class="dropdown-item" href="/posts/fentesy">Fantasy</a>
+          <a class="dropdown-item" href="/posts/story">WomenStory</a>
         </div>
       </li>
     <!--  <li class="nav-item">
