--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,21 @@
 <div class="row">
 <div class="col-md-8">
+<% if @post.present? %>
+  <% @post.errors.each do |attr, msg| %>
+    <div class="alert alert-danger" role="alert">
+      <%= attr %> <%= msg %>
+    </div>
+  <% end %>
+<% end %>
 <%= form_for(:post, url: "/posts/create", method: "post") do %>
   <div class="form-group">
     <%= label(:post, :title, "Title") %>
     <%= text_field(:post, :title, class: "form-control") %>
   </div>
     <div class="form-group">
-    <%= label(:post, :topic_id, "Choose tema") %>
-    <%= select(:post, :topic_id, options_from_collection_for_select(@topics, "id", "title"), {}, {class: "form-control"}) %>
+    <!-- :topic_id == :topic (+ def post_params => ... [:topic_id] = params...[:topic]) -->
+    <%= label(:post, :topic, "Choose tema") %>
+    <%= select(:post, :topic, options_from_collection_for_select(@topics, "id", "title"), {}, {class: "form-control"}) %>
   </div>
   <div class="form-group">
     <%= label(:post, :body, "Text") %>
