add test for post

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,19 +23,20 @@
         <a class="nav-link" href="/">All posts </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/posts/design">MyDesign</a>
+        <a class="nav-link" href="/posts/design">Дизайн</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/posts/publication">Publications</a>
+        <a class="nav-link" href="/posts/publication">Публикации</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="/posts/books" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown/MyBooks
+          Книги
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/posts/detective">Detective</a>
-          <a class="dropdown-item" href="/posts/fentesy">Fantasy</a>
-          <a class="dropdown-item" href="/posts/story">WomenStory</a>
+          <a class="dropdown-item" href="/posts/detective">Детективы</a>
+          <a class="dropdown-item" href="/posts/fentesy">Фентези</a>
+          <a class="dropdown-item" href="/posts/story">Мелодрама</a>
+          <a class="dropdown-item" href="/posts/some">Разное</a>
         </div>
       </li>
     <!--  <li class="nav-item">
